2007-06-03 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/gossip-private-chat.c:
	* libempathy-gtk/gossip-chat.c:
	* libempathy-gtk/gossip-chat.h:
	* libempathy/empathy-tp-chat.c: Add all properties described by TP spec
	for the Text channel on EmpathyTpChat. Make use of "name" and "subject"
	properties in GossipGroupChat.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-log-manager.c: Fix crash when there is no log
	available for a chat.
	* libempathy/empathy-tp-contact-list.c: Fix a crash when destroy signal
	is emitted before StatusChanged.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/gossip-private-chat.c:
	* libempathy-gtk/gossip-chat.c:
	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-log-manager.h:
	* libempathy/empathy-log-manager.xsl:
	* libempathy/Makefile.am: Log chats and display 10 last messages when
	opening a new chat.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/gossip-contact.c: Set default presence to available if
	there is no presence iface.

2007-06-02  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-ui-utils.c:
	* libempathy-gtk/gossip-ui-utils.h:
	* configure.ac: Use gnome_vfs_url_show() instead of gnome_url_show()
	to avoid libgnomeui dependency (Ross Burton).

2007-06-01  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chatrooms-window.c:
	* libempathy-gtk/gossip-chat-window.c:
	* libempathy/gossip-chatroom.c:
	* libempathy/gossip-chatroom-manager.c:
	* configure.ac: Monitor changes on chatrooms.xml file and relead it 
	when it's modified. connect chatroom-added/removed in some places where
	needed.

2007-06-01  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.7

2007-05-31  Xavier Claessens  <xclaesse@gmail.com>
