@@ -12,6 +12,7 @@ libempathy-gtk/empathy-main-window.c
 libempathy-gtk/empathy-main-window.glade
 libempathy-gtk/empathy-status-icon.glade
 libempathy-gtk/gossip-about-dialog.c
+libempathy-gtk/gossip-account-chooser.c
 libempathy-gtk/gossip-accounts-dialog.c
 libempathy-gtk/gossip-accounts-dialog.glade
 libempathy-gtk/gossip-account-widget-generic.c
@@ -20,7 +21,13 @@ libempathy-gtk/gossip-chat.c
 libempathy-gtk/gossip-chat.glade
 libempathy-gtk/gossip-chat-view.c
 libempathy-gtk/gossip-chat-window.c
+libempathy-gtk/gossip-chatrooms-window.c
+libempathy-gtk/gossip-chatrooms-window.glade
 libempathy-gtk/gossip-contact-list-view.c
+libempathy-gtk/gossip-group-chat.c
+libempathy-gtk/gossip-group-chat.glade
+libempathy-gtk/gossip-new-chatroom-dialog.c
+libempathy-gtk/gossip-new-chatroom-dialog.glade
 libempathy-gtk/gossip-preferences.c
 libempathy-gtk/gossip-preferences.glade
 libempathy-gtk/gossip-presence-chooser.c
