@@ -1,0 +1,3 @@
+# Please keep this file sorted alphabetically.
+
+data/empathy.desktop.in.in
